--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^14.0.0",
+    "react-icons": "^5.0.1",
     "react-moment": "^1.1.3",
     "react-multi-carousel": "^2.8.4",
     "react-number-format": "^5.3.1",
